@startuml MapProvider Module View

skinparam classAttributeIconSize 0
skinparam classFontSize 10
skinparam classFontName Arial

package "Display GUI" {
    class TForm1
}

package "Map Provider" {
    interface MapProvider {
        +Initialize(loadFromInternet: bool): void
        +Resize(width: int, height: int): void
        +GetEarthView(): FlatEarthView*
        +GetTileManager(): TileManager*
    }

    abstract class AbstractMapProvider {
        #earthView: FlatEarthView*
        #storage: FilesystemStorage*
        #keyhole: KeyholeConnection*
        #tileManager: TileManager*
        #masterLayer: GoogleLayer*
        #CleanUp(): void
        +Initialize(loadFromInternet: bool): void
        +Resize(width: int, height: int): void
        +GetEarthView(): FlatEarthView*
        +GetTileManager(): TileManager*
    }

    class GoogleMapProvider {
        +Initialize(loadFromInternet: bool): void
    }

    class VFRMapProvider {
        +Initialize(loadFromInternet: bool): void
    }

    class IFRLowMapProvider {
        +Initialize(loadFromInternet: bool): void
    }

    class IFRHighMapProvider {
        +Initialize(loadFromInternet: bool): void
    }

    class MapProviderFactory {
        +{static} Create(type: int): MapProvider*
    }
}

package "Map Components" {
    class FlatEarthView
    class FilesystemStorage
    class TileManager
    class GoogleLayer
    class KeyholeConnection
}

MapProvider <|.. AbstractMapProvider
AbstractMapProvider <|-- GoogleMapProvider
AbstractMapProvider <|-- VFRMapProvider
AbstractMapProvider <|-- IFRLowMapProvider
AbstractMapProvider <|-- IFRHighMapProvider

AbstractMapProvider *-- FlatEarthView : creates
AbstractMapProvider *-- FilesystemStorage : creates
AbstractMapProvider *-- KeyholeConnection : creates
AbstractMapProvider *-- TileManager : creates
AbstractMapProvider *-- GoogleLayer : creates
GoogleLayer --> TileManager : uses
TileManager --> FilesystemStorage : uses

MapProviderFactory ..> MapProvider : creates

TForm1 --> MapProviderFactory : uses
TForm1 --> MapProvider : has

@enduml 